force-app/main/default/objects/Merit_Defendant__c/Merit_Defendant__c.object-meta.xml
<CustomObject>
    <label>Merit - Defendant</label>
    <nameField>
        <displayFormat>Defendant Liability-{00000}</displayFormat>
        <label>Merit - Defendant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merit - Defendants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>