force-app/main/default/objects/Merit_Defendant__c/fields/Defendant_Firm__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm__c</fullName>
    <formula>Defendant_Firm_Schedule_of_Loss__r.Defendant_Firm__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defendant Firm</label>
    <type>Text</type>
</CustomField>