force-app/main/default/objects/Merit_Defendant__c/fields/Defendant_Firm_Schedule_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Firm_Schedule_of_Loss__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Defendant Firm - Schedule of Loss</label>
    <referenceTo>Defendant_Firm_Schedule_of_Loss__c</referenceTo>
    <relationshipLabel>Merit - Defendants</relationshipLabel>
    <relationshipName>Merit_Defendants_del</relationshipName>
    <type>Lookup</type>
</CustomField>