force-app/main/default/objects/Merit_Defendant__c/fields/Defendant_Position__c.field-meta.xml
<CustomField>
    <fullName>Defendant_Position__c</fullName>
    <label>Defendant Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>