force-app/main/default/objects/Merit_Defendant__c/fields/Merit__c.field-meta.xml
<CustomField>
    <fullName>Merit__c</fullName>
    <label>Merit</label>
    <referenceTo>Merit__c</referenceTo>
    <relationshipLabel>Merit - Defendants</relationshipLabel>
    <relationshipName>Merit_Defendants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>